fixed views so that there are no white spaces with larger screens

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,7 +1,6 @@
 
 .profile {
   height: 400px;
-  width:100%;
   background-color: #bf790f;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
   display:flex;
